@@ -153,6 +153,12 @@ Interpreters.Float128LE.LONG=128-bit Floating Point (Little Endian)
 
 Interpreters.String.SHORT=String
 Interpreters.String.LONG=String
+Interpreters.Stringz.SHORT=Stringz
+Interpreters.Stringz.LONG=Null-Terminated String
+Interpreters.BinaryString.SHORT=BinString
+Interpreters.BinaryString.LONG=Binary String
+Interpreters.BinaryStringz.SHORT=BinStringz
+Interpreters.BinaryStringz.LONG=Null-Terminated Binary String
 
 LengthOption.AUTO.SHORT=Auto
 LengthOption.AUTO.LONG=Automatic
