@@ -2,6 +2,7 @@
 Version X.X (XXXX-XX-XX)
 
      New: Added an interpreter for null-terminated strings.
+     New: Added interpreters for strings with unknown encoding (binary strings.)
 
 Version 0.6 (2014-06-24)
 
